core/traefik/traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-lb
  namespace: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.4.202 # IP in MetalLB pool
  selector:
    app: traefik
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 80
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: 443
